setup jwt token security